Update Intro and Day 1

--- a/01_fundamentals_of_production_code.ipynb
+++ b/01_fundamentals_of_production_code.ipynb
@@ -21,7 +21,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false",
+    "Collapsed": "true",
     "toc-hr-collapsed": true
    },
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "### Agile mindset vs process\n",
@@ -118,16 +118,16 @@
    "source": [
     "## Overview: Fundamentals of Production Code\n",
     "\n",
-    "- Environments\n",
-    "- Code Style\n",
-    "- Design Patterns\n",
-    "- Thinking Functionally"
+    "- Environments  (Robin)\n",
+    "- Code Style  (Robin)\n",
+    "- Design Patterns  (Robin?)\n",
+    "- Thinking Functionally  (Robin)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false",
+    "Collapsed": "true",
     "toc-hr-collapsed": true
    },
    "source": [
@@ -151,7 +151,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "#### Creating an Environment (env) to update to Python 3.8\n",
@@ -185,7 +185,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "#### Registering Environments as Kernels in Jupyter"
@@ -212,13 +212,13 @@
     "Collapsed": "false"
    },
    "source": [
-    "<img src=jupyter_environments.png />"
+    "<img src=img/jupyter_environments.png />"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "#### Other Environments\n",
@@ -231,7 +231,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "### IDEs"
@@ -263,7 +263,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "### [VSCode](https://code.visualstudio.com/) for working on Remote Server"
@@ -295,7 +295,7 @@
     "3. install `Remote - SSH`\n",
     "4. Now you have a new icon in the footer: \n",
     "\n",
-    "   <img width=300, height=15, src=\"ssh-remote.png\">\n",
+    "   <img width=300, height=15, src=\"img/ssh-remote.png\">\n",
     "   \n",
     "6. `Remote-SSH: Connect to Host...`\n",
     "7. `Add New SSH Host...`\n"
@@ -381,7 +381,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false",
+    "Collapsed": "true",
     "toc-hr-collapsed": true
    },
    "source": [
@@ -464,7 +464,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "#### ***Explicit is better than implicit.***"
@@ -501,7 +501,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "#### ***Simple is better than complex.***\n"
@@ -510,7 +510,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "#### ***Flat is better than nested.***\n"
@@ -618,7 +618,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "#### ***Special cases aren't special enough to break the rules.***\n",
@@ -628,7 +628,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "#### ***If the implementation is hard to explain, it's a bad idea.***\n"
@@ -637,7 +637,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "#### ***Namespaces are one honking great idea -- let's do more of those!***"
@@ -731,7 +731,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "#### Comments are important, but Documentation and schematics are even more important\n",
@@ -796,7 +796,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "### PEP 8"
@@ -805,7 +805,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "#### Coworker is asking to see your code? \n",
@@ -837,7 +837,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "#### Naming Styles\n",
@@ -853,7 +853,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "#### Which to use for what?\n",
@@ -936,7 +936,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "#### PEP8 is not definite"
@@ -1152,7 +1152,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "#### Comment, but not unecessarily"
@@ -1198,7 +1198,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "#### Docstrings\n",
@@ -1453,7 +1453,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "#### Documentation"
@@ -1573,7 +1573,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "#### PEP8 + people = a lot of different opinions"
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "### KISS, goodbye to worrying about formatting"
@@ -1694,7 +1694,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "### What to "
@@ -1712,7 +1712,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "### Side note: There are rules for *everything*"
@@ -1721,7 +1721,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "#### ISO 8601: Data elements and interchange formats - information interchange - Representation of dates and times\n",
@@ -1745,7 +1745,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "## Design Patterns"
@@ -1754,7 +1754,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "### Why are they important"
@@ -1817,7 +1817,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "## Code Analyzer"
@@ -1915,7 +1915,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "## Functional Programming"
@@ -2377,7 +2377,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "## Module Architecture"
@@ -2403,7 +2403,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "### Package Structure\n",
@@ -2459,7 +2459,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "### PEP8 conform module level dunder names\n",
@@ -2552,7 +2552,25 @@
     "Collapsed": "false"
    },
    "source": [
+    "<img src=\"https://preview.redd.it/08sz26e91k841.jpg?width=640&crop=smart&auto=webp&s=4cbb04afe0b73ad80c6d8b74b509024f3201405e\" width=400>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
     "### Sphinx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "<img src=\"https://i.redd.it/d5x18rtcfof31.png\" width=400 />"
    ]
   },
   {
@@ -2688,7 +2706,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "true"
    },
    "source": [
     "## Code Maintenance"
@@ -2753,6 +2771,361 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "true"
+   },
+   "source": [
+    "## Command Line Interfaces"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "Most popular tool these days: <a href=\"https://github.com/pallets/click\">**Click**</a>\n",
+    "\n",
+    "```bash\n",
+    "conda install click\n",
+    "pip install click\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "Click is developed as parts of <a href=\"palletsprojects.com/\">pallets</a>, who also develop <a href=\"https://github.com/pallets/flask\">Flask</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "true"
+   },
+   "source": [
+    "### Minimal Example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "```python\n",
+    "import click\n",
+    "\n",
+    "\n",
+    "@click.command()\n",
+    "def hello():\n",
+    "    click.echo('Hello World')\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    hello()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "```bash\n",
+    "> python test.py\n",
+    "Hello World\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "```bash\n",
+    "> python test.py --help\n",
+    "Usage: click_test.py [OPTIONS]\n",
+    "\n",
+    "Options:\n",
+    "  --help  Show this message and exit.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "`click.echo` is used to ensure:\n",
+    "- works for `Python 2` and `Python 3`\n",
+    "- prevents `UnicodeError`\n",
+    "- supports ANSI Colors\n",
+    "If you do not want these features, you can use `print()`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "true"
+   },
+   "source": [
+    "### Adding Commands"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "`click.group`s wrap commands as one, allowing arbitrarily nesting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "```python\n",
+    "@click.group()\n",
+    "def cli():\n",
+    "    pass\n",
+    "\n",
+    "@click.command()\n",
+    "def initdb():\n",
+    "    click.echo('Initialized the database')\n",
+    "\n",
+    "@click.command()\n",
+    "def dropdb():\n",
+    "    click.echo('Dropped the database')\n",
+    "\n",
+    "cli.add_command(initdb)\n",
+    "cli.add_command(dropdb)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    cli()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "Commandas are activated using:\n",
+    "```bash\n",
+    "> python test.py initdb\n",
+    "Initialized the database\n",
+    "```\n",
+    "\n",
+    "```bash\n",
+    "> python test.py --help\n",
+    "Usage: click_test.py [OPTIONS] COMMAND [ARGS]...\n",
+    "\n",
+    "  --help  Show this message and exit.\n",
+    "\n",
+    "Commands:\n",
+    "  dropdb\n",
+    "  initdb\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "true"
+   },
+   "source": [
+    "### Adding Parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "Commands can have two types of parameters:\n",
+    "- `argument`s: positional arguments of python fucntions \n",
+    "- `option`s: key-value arguments of python functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "```python\n",
+    "import click\n",
+    "\n",
+    "\n",
+    "@click.command()\n",
+    "@click.option('--count', default=1, help='number of greetings')\n",
+    "@click.argument('name')\n",
+    "def hello(count, name):\n",
+    "    for x in range(count):\n",
+    "        click.echo('Hello %s!' % name)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    hello()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "```bash\n",
+    "> python test.py --help\n",
+    "Usage: click_test.py [OPTIONS] NAME\n",
+    "\n",
+    "Options:\n",
+    "  --count INTEGER  number of greetings\n",
+    "  --help           Show this message and exit.\n",
+    "```\n",
+    "\n",
+    "```bash\n",
+    "python test.py Robin\n",
+    "Hello Robin!\n",
+    "```\n",
+    "\n",
+    "```bash\n",
+    "python test.py Robin --count 3\n",
+    "Hello Robin!\n",
+    "Hello Robin!\n",
+    "Hello Robin!\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "true"
+   },
+   "source": [
+    "### More complex Options"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "https://click.palletsprojects.com/en/7.x/options/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "Options allow for:\n",
+    "- specify variable name (`\"--n\", \"N\"` for fixing case in-sensitivity)\n",
+    "- define aliast (`\"--n\", \"-n\"`)\n",
+    "- required flag (`required=True`)\n",
+    "- default values (`default=1`)\n",
+    "- type limiting and conversion (`type=int` or even `type=(int, int)`)\n",
+    "- multi-value arguments (`nargs=2` or `multiple=True` for unspecified number of args)\n",
+    "- binary flag (`is_flag=True, flag_value=True` or `--shout/--no-shout` with `true/false`)\n",
+    "- choice input (`type=click.Choice(['MD5', 'SHA1'], case_sensitive=False)`)\n",
+    "- allow promted input (`prompt=\"Enter Name\"` and for confirmation `confirmation_prompt=True`)\n",
+    "- range limitations (`type=click.IntRange(0, 100)`)\n",
+    "- iteration counting (`count=True` counts multiple invokations e.g. `-vvv` for `v=3`)\n",
+    "- password prompts (`hinde_input=True`)\n",
+    "- callbacks for validation or other (`callback=print_version`)\n",
+    "- displaying defaults (`show_defaults=True`)\n",
+    "- hide from help function (`hidden=True`)\n",
+    "- and more..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "```python\n",
+    "@click.option(\"--c1\", default=1, type=click.FloatRange(0, None), show_default=True,\n",
+    "              help=\"Scale between: hydrodynamic: 0.1, transition: 1, adiabatic: 5\")\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "true"
+   },
+   "source": [
+    "### Real world example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "<img src=\"img/click_example_code.jpg\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "<img src=\"img/click_example_help.jpg\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "### Setuptools Integration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "Benefits:\n",
+    "- Executable wrapping with necessary requirements into a virtual environment\n",
+    "- Windows and Unix executables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -2760,6 +3133,38 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "```python\n",
+    "import click\n",
+    "\n",
+    "@click.command()\n",
+    "@click.option(\"--count\", default=1, help=\"Number of greetings.\")\n",
+    "@click.option(\"--name\", prompt=\"Your name\",\n",
+    "              help=\"The person to greet.\")\n",
+    "def hello(count, name):\n",
+    "    \"\"\"Simple program that greets NAME for a total of COUNT times.\"\"\"\n",
+    "    for _ in range(count):\n",
+    "        click.echo(\"Hello, %s!\" % name)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    hello()\n",
+    "```"
+   ]
   },
   {
    "cell_type": "code",
@@ -2796,7 +3201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.2"
   },
   "toc-autonumbering": true
  },
