converted notebooks to jupytext

--- a/01_fundamentals_of_production_code.ipynb
+++ b/01_fundamentals_of_production_code.ipynb
@@ -3186,6 +3186,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py"
+  },
   "kernelspec": {
    "display_name": "py38",
    "language": "python",
