--- a/02_database_basics.ipynb
+++ b/02_database_basics.ipynb
@@ -186,6 +186,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
