--- a/03_continuous_integration.ipynb
+++ b/03_continuous_integration.ipynb
@@ -169,6 +169,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
