--- a/05_performance.ipynb
+++ b/05_performance.ipynb
@@ -304,6 +304,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
