added a few more click examples

--- a/01_fundamentals_of_production_code.ipynb
+++ b/01_fundamentals_of_production_code.ipynb
@@ -21,8 +21,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "true",
-    "toc-hr-collapsed": true
+    "incorrectly_encoded_metadata": "Collapsed=\"true\" toc-hr-collapsed=true"
    },
    "source": [
     "## Data Science Teams"
@@ -105,7 +104,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -127,8 +127,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "true",
-    "toc-hr-collapsed": true
+    "endofcell": "--",
+    "incorrectly_encoded_metadata": "Collapsed=\"true\" toc-hr-collapsed=true"
    },
    "source": [
     "## Overview: Setting Up the Environment\n",
@@ -373,7 +373,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -381,8 +382,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "true",
-    "toc-hr-collapsed": true
+    "incorrectly_encoded_metadata": "Collapsed=\"true\" toc-hr-collapsed=true"
    },
    "source": [
     "## Code Style"
@@ -723,7 +723,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -743,7 +744,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -928,7 +930,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -1067,7 +1070,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -1076,7 +1080,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -1126,7 +1131,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -1144,7 +1150,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -1190,7 +1197,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -1472,7 +1480,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "endofcell": "--"
    },
    "source": [
     "##### Audience:\n",
@@ -1513,7 +1522,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -1565,7 +1575,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -1686,7 +1697,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -1704,7 +1716,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -1737,7 +1750,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -1800,7 +1814,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -1809,7 +1824,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -1888,7 +1904,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -1907,7 +1924,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -1940,7 +1958,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -2001,7 +2020,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -2505,7 +2525,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -2514,7 +2535,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -2523,7 +2545,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -2532,7 +2555,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -2593,8 +2617,8 @@
    "source": [
     "Sample Practice\n",
     "```bash\n",
-    "mkdir docs\n",
-    "cd docs \n",
+    "# mkdir docs\n",
+    "# cd docs \n",
     "```\n",
     "```bash\n",
     "sphinx-quickstart\n",
@@ -2624,7 +2648,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -2642,7 +2667,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -2660,7 +2686,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -2680,7 +2707,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -2689,7 +2717,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -2698,7 +2727,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -2917,6 +2947,29 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "# NOTE ED better way:\n",
+    "\n",
+    "@click.group()\n",
+    "def cli():\n",
+    "    pass\n",
+    "\n",
+    "# note 'cli' (name of the group) instead of 'click'\n",
+    "@cli.command()\n",
+    "def initdb():\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "@cli.command()\n",
+    "def dropdb():\n",
+    "    pass\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "Collapsed": "false"
    },
@@ -2936,6 +2989,40 @@
     "Commands:\n",
     "  dropdb\n",
     "  initdb\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Groups can perform common computations and pass the results to the children commands via the context. From the doc:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "@click.group()\n",
+    "@click.option('--debug/--no-debug', default=False)\n",
+    "@click.pass_context\n",
+    "def cli(ctx, debug):\n",
+    "    # ensure that ctx.obj exists and is a dict (in case `cli()` is called\n",
+    "    # by means other than the `if` block below)\n",
+    "    ctx.ensure_object(dict)\n",
+    "\n",
+    "    ctx.obj['DEBUG'] = debug\n",
+    "\n",
+    "    \n",
+    "@cli.command()\n",
+    "@click.pass_context\n",
+    "def sync(ctx):\n",
+    "    click.echo('Debug is %s' % (ctx.obj['DEBUG'] and 'on' or 'off'))\n",
+    "\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    cli(obj={})\n",
     "```"
    ]
   },
@@ -2973,6 +3060,9 @@
     "@click.option('--count', default=1, help='number of greetings')\n",
     "@click.argument('name')\n",
     "def hello(count, name):\n",
+    "    '''\n",
+    "    Greets somebody a given number of times.\n",
+    "    '''\n",
     "    for x in range(count):\n",
     "        click.echo('Hello %s!' % name)\n",
     "\n",
@@ -2989,7 +3079,9 @@
    "source": [
     "```bash\n",
     "> python test.py --help\n",
-    "Usage: click_test.py [OPTIONS] NAME\n",
+    "Usage: test.py [OPTIONS] NAME\n",
+    "\n",
+    "  Greets somebody a given number of times.\n",
     "\n",
     "Options:\n",
     "  --count INTEGER  number of greetings\n",
@@ -2997,12 +3089,12 @@
     "```\n",
     "\n",
     "```bash\n",
-    "python test.py Robin\n",
+    "> python test.py Robin\n",
     "Hello Robin!\n",
     "```\n",
     "\n",
     "```bash\n",
-    "python test.py Robin --count 3\n",
+    "> python test.py Robin --count 3\n",
     "Hello Robin!\n",
     "Hello Robin!\n",
     "Hello Robin!\n",
@@ -3049,6 +3141,10 @@
     "- callbacks for validation or other (`callback=print_version`)\n",
     "- displaying defaults (`show_defaults=True`)\n",
     "- hide from help function (`hidden=True`)\n",
+    "- file argument (`type=click.File('w')`)\n",
+    "  - bonus: specifying `-` will automatically use stdin/stdout as appropriate\n",
+    "- path argument (`type=click.Path(exists=True, file_okay=False, dir_okay=True, writable=True)`)\n",
+    "  - bonus: performs some checks (above: must exists, not a file, can be written to)\n",
     "- and more..."
    ]
   },
@@ -3129,7 +3225,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -3138,7 +3235,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -3170,7 +3268,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "Collapsed": "false",
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": []
@@ -3187,12 +3286,13 @@
  ],
  "metadata": {
   "jupytext": {
+   "encoding": "# -*- coding: utf-8 -*-",
    "formats": "ipynb,py"
   },
   "kernelspec": {
-   "display_name": "py38",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py38"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3204,7 +3304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.7"
   },
   "toc-autonumbering": true
  },
